# wps_blog

./: .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  manage.py  requirements.txt
.github/: dependabot.yml
blog-ui/: .gitignore  Cargo.toml  DEVOPS_INFRASTRUCTURE_WORK.md  Dockerfile  browser.js  package.json  server.js
blog-ui/.cargo/: audit.toml
blog-ui/assets/: rum.js  site.webmanifest  sw.js
blog-ui/crates/browser/: Cargo.toml  index.html  style.css
blog-ui/crates/browser/src/: main.rs
blog-ui/crates/server/: Cargo.toml
blog-ui/crates/server/src/: main.rs
blog-ui/crates/shared/: Cargo.toml
blog-ui/crates/shared/src/: lib.rs
blog-ui/end2end/: package.json  playwright.config.ts
blog-ui/end2end/tests/: about.spec.ts  accessibility.spec.ts  comments.spec.ts  contact.spec.ts  home.spec.ts  language_switcher.spec.ts  multilang_a11y.spec.ts  multilang_content.spec.ts  multilang_routing.spec.ts  navigation.spec.ts  performance.spec.ts  post_detail.spec.ts  post_list.spec.ts  search.spec.ts  static_pages.spec.ts  syntax_highlight.spec.ts  tags.spec.ts
blog-ui/src/: app.rs  lib.rs  main.rs
blog-ui/src/api/: client.rs  mod.rs  types.rs
blog-ui/src/components/: mod.rs
blog-ui/src/components/about/: experience_item.rs  experience_timeline.rs  mod.rs  profile_header.rs  skill_bar.rs  skill_group.rs  social_links.rs
blog-ui/src/i18n/: context.rs  el.rs  en.rs  formatting.rs  mod.rs  plurals.rs  ru.rs
blog-ui/src/pages/: about.rs  contact.rs  home.rs  mod.rs  not_found.rs  post_detail.rs  post_list.rs  search.rs  static_page.rs  tag_list.rs  tag_posts.rs
blog-ui/src/server/: mod.rs
blog-ui/style/: _about.scss  _comments.scss  _contact.scss  _experience.scss  _footer.scss  _header.scss  _language_switcher.scss  _layout.scss  _pagination.scss  _post.scss  _profile.scss  _reset.scss  _search.scss  _sidebar.scss  _skills.scss  _social.scss  _tags.scss  _typography.scss  _utilities.scss  _variables.scss  main.scss
blog-ui/tests/: api_client_test.rs  api_types_test.rs  logic_test.rs
blog-ui/webpack/: browser.js  server.js
(+487 files in other folders)
