[package]
name = "blog-ui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.8.5" }
leptos_meta = { version = "0.8.5" }
leptos_router = { version = "0.8.5" }
leptos_actix = { version = "0.8.5", optional = true }
actix-web = { version = "4", optional = true, features = ["macros"] }
actix-files = { version = "0.6", optional = true }
http = { version = "1", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"], optional = true }
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2.106"
console_log = { version = "1", optional = true }
log = "0.4"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2"

[dev-dependencies]
serde_json = "1"
tokio = { version = "1", features = ["full"] }
wiremock = "0.6"

[features]
csr = ["leptos/csr"]
hydrate = ["leptos/hydrate"]
ssr = [
  "dep:leptos_actix",
  "dep:actix-web",
  "dep:actix-files",
  "dep:reqwest",
  "dep:http",
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
]

[package.metadata.leptos]
output-name = "blog-ui"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/main.scss"
assets-dir = "assets"
site-addr = "0.0.0.0:3000"
reload-port = 3001
browserquery = "defaults"
env = "DEV"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
