[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "^0.20", features = ["ssr"] }
shared = { path = "../shared" }
actix-web = "^4.3"
actix-files = "^0.6"
env_logger = "^0.10"
clap = { version = "^4.1", features = ["derive"] }
